src/unit_tests/Custom/type_checker/success/self5.cl
class Main {
    main(): SELF_TYPE { self };
};

class A {
    a : SELF_TYPE <- fun();
    fun() : SELF_TYPE { new SELF_TYPE };
};

class B inherits A {};