src/unit_tests/Custom/type_checker/fail/dispatch6.cl
class Main inherits IO {
    a : A;

    main(): Int {
        a.f("str")
    };
};

class A {
    f(x: String) : SELF_TYPE { self };
};